# ISMatching

./: .gitignore  Cargo.toml  pyproject.toml  readme.md
docs/ismatching/: index.html  ismatching.html  pyclass.html  pyfunctions.html
pysrc/ismatching/: __init__.py  is_class.py  is_functions.py  pyclass.py  pyfunctions.py  pyimports.py
src/: functions.rs  lib.rs
