[package]
name = "ismatching"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ismatching"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.21.2", features = ["num-bigint", "anyhow"]}
ndarray = {version = "0.15.6", features = ["rayon"]}
numpy = "0.21.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"
rayon = "1.10.0"
num_cpus = "1.16.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
anyhow = "1.0.86"
